@@ -1,0 +1,23 @@
+<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:test="http://test" attributeFormDefault="unqualified"
+	elementFormDefault="qualified" targetNamespace="http://test">
+
+	<xs:complexType name="TestType" abstract="true">
+		<xs:sequence>
+			<xs:element name="prop1" type="xs:string" />
+		</xs:sequence>
+	</xs:complexType>
+
+	<xs:complexType name="ExtendedType">
+		<xs:complexContent>
+			<xs:extension base="test:TestType">
+				<xs:sequence>
+					<xs:element name="prop2" type="xs:string" />
+					<xs:any maxOccurs="unbounded" minOccurs="0" processContents="skip" />
+				</xs:sequence>
+			</xs:extension>
+		</xs:complexContent>
+	</xs:complexType>
+
+	<xs:element name="extended" type="ExtendedType" />
+
+</xs:schema>
